# adversary-emulation-framework

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agents/: aep_agent.py
core/: __init__.py  config.py  database.py  logging_setup.py  main.py
core/agent/: __init__.py  agent_manager.py  beacon_handler.py  pentest_ssh.py  task_dispatcher.py
core/api/: __init__.py
core/api/v1/: agents.py  apt_profiles.py  atomics.py  campaigns.py  health.py  phase3.py  purple_team.py  reports.py  router.py  settings.py  stix.py  techniques.py
core/detection/: __init__.py  purple_team.py  validator.py
core/engine/: __init__.py  ai_decision.py  campaign_builder.py  campaign_runner.py  pivot_engine.py  shannon_client.py  technique_selector.py
core/graph/: __init__.py  attack_path.py
core/intel/: __init__.py  apt_profiles_loader.py  art_loader.py  attack_loader.py  campaign_parser.py
core/models/: __init__.py  agent.py  apt_profile.py  campaign.py  execution.py  finding.py  purple_session.py  technique.py
core/reporting/: __init__.py  generator.py  html_generator.py  pdf_generator.py
core/schemas/: __init__.py  apt_profile.py  campaign.py  execution.py  finding.py  technique.py
core/stix/: __init__.py  bundle_builder.py  mapper.py
core/techniques/: __init__.py  base.py  registry.py
core/techniques/it/: __init__.py  t1003_credential_dumping.py  t1021_remote_services.py  (+4 more)
frontend/: index.html
tests/: __init__.py  conftest.py  test_foundation.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py
(+5 files in other folders)
